fix: update the swagger to have param when update and delete the product. update the handler for the product in api-gateway to have public and protected route
